fix(ui5-busyindicator): change z-index not to overlap popover or dialog (#624)
ui5-popover and ui5-dialog start from z-index 100
FIXES: https://github.com/SAP/ui5-webcomponents/issues/610

--- a/packages/main/src/themes/BusyIndicator.css
+++ b/packages/main/src/themes/BusyIndicator.css
@@ -76,7 +76,7 @@ ui5-busyindicator:not([hidden])[active] {
 
 .ui5-busyindicator-dynamic-content {
 	position: absolute;
-	z-index: 999;
+	z-index: 99;
 	width: 100%;
 	height: 100%;
 	display: flex;
